资料/MT设备/二次开发例程及接口文件V3.16.2/应用例程/VBDemo2/VBDemo/MT_API.bas


Declare Function MT_Get_PLC_Code_Size Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Home_V_Start Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Home_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Home_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Home_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Home_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Velocity_V_Start Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Velocity_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Velocity_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Velocity_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Velocity_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Position_V_Start Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Position_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Position_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Position_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Position_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Line_V_Start Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Circle_V_Start Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Line_X_Run_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AAxis_Num As Long, ByVal pAxis As Long, ByVal pTarget As Long) As Long

Declare Function MT_Set_Axis_Line_X_Run_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AAxis_Num As Long, ByVal pAxis As Long, ByVal pTarget As Long) As Long

Declare Function MT_Set_Axis_Line_X_Target_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AAxisID As Long, ByVal ATarget As Long) As Long

Declare Function MT_Set_Axis_Line_X_Target_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AAxisID As Long, ByVal ATarget As Long) As Long

Declare Function MT_Set_Axis_Line_X_Count Lib "MT_API.dll" (ByVal AObj As Integer, ByVal ANum As Long) As Long

Declare Function MT_Set_Axis_Line_X_Axis Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AAxisID As Long, ByVal AAxis As Long) As Long

Declare Function MT_Set_Stream_Run Lib "MT_API.dll" () As Long

Declare Function MT_Set_Stream_Stop Lib "MT_API.dll" () As Long

Declare Function MT_Set_Stream_Pause Lib "MT_API.dll" () As Long

Declare Function MT_Set_Stream_Clear Lib "MT_API.dll" () As Long

Declare Function MT_Get_Stream_Space Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Set_Stream_Delay Lib "MT_API.dll" (ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_V_Max Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_V_Start Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_Stop Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Line_Halt Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Line_X_Run_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AAxis_Num As Long, ByVal pAxis As Long, ByVal pTarget As Long) As Long

Declare Function MT_Set_Stream_Line_X_Run_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AAxis_Num As Long, ByVal pAxis As Long, ByVal pTarget As Long) As Long

Declare Function MT_Set_Stream_Circle_Axis Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Axis_ID0 As Long, ByVal Axis_ID1 As Long) As Long

Declare Function MT_Set_Stream_Circle_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Circle_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Circle_V_Max Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Circle_V_Start Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Circle_R_CW_Run_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AR As Long, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Stream_Circle_R_CW_Run_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AR As Long, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Stream_Circle_R_CCW_Run_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AR As Long, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Stream_Circle_R_CCW_Run_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AR As Long, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Stream_Circle_Stop Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Circle_Halt Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Wait_Line Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Wait_Circle Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_OC_Out_Single Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_OC_Out_All Lib "MT_API.dll" (ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Optic_Out_Single Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Optic_Out_All Lib "MT_API.dll" (ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Dec_Enable Lib "MT_API.dll" () As Long

Declare Function MT_Set_Stream_Dec_Disable Lib "MT_API.dll" () As Long

Declare Function MT_Get_Encoder_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_Encoder_Pos Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Encoder_Pos Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Encoder_Z_Polarity Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Encoder_Dir_Polarity Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Get_Encoder_Index_Line_Count Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Encoder_Over_Enable Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Encoder_Over_Max Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Encoder_Over_Stable Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Help_Step_Line_Real_To_Steps Lib "MT_API.dll" (ByVal AStepAngle As Double, ByVal ADiv As Long, ByVal APitch As Double, ByVal ALineRatio As Double, ByVal AValue As Double) As Long

Declare Function MT_Help_Step_Circle_Real_To_Steps Lib "MT_API.dll" (ByVal AStepAngle As Double, ByVal ADiv As Long, ByVal ACircleRatio As Double, ByVal AValue As Double) As Long

Declare Function MT_Help_Step_Line_Steps_To_Real Lib "MT_API.dll" (ByVal AStepAngle As Double, ByVal ADiv As Long, ByVal APitch As Double, ByVal ALineRatio As Double, ByVal AValue As Long) As Double

Declare Function MT_Help_Step_Circle_Steps_To_Real Lib "MT_API.dll" (ByVal AStepAngle As Double, ByVal ADiv As Long, ByVal ACircleRatio As Double, ByVal AValue As Long) As Double

Declare Function MT_Help_Encoder_Line_Real_To_Steps Lib "MT_API.dll" (ByVal APitch As Double, ByVal ALineRatio As Double, ByVal ALineCount As Long, ByVal AValue As Double) As Long

Declare Function MT_Help_Encoder_Circle_Real_To_Steps Lib "MT_API.dll" (ByVal ACircleRatio As Double, ByVal ALineCount As Long, ByVal AValue As Double) As Long

Declare Function MT_Help_Encoder_Line_Steps_To_Real Lib "MT_API.dll" (ByVal APitch As Double, ByVal ALineRatio As Double, ByVal ALineCount As Long, ByVal AValue As Long) As Double

Declare Function MT_Help_Encoder_Circle_Steps_To_Real Lib "MT_API.dll" (ByVal ACircleRatio As Double, ByVal ALineCount As Long, ByVal AValue As Long) As Double

Declare Function MT_Help_Grating_Line_Real_To_Steps Lib "MT_API.dll" (ByVal AUnit_um As Double, ByVal AValue As Double) As Long

Declare Function MT_Help_Grating_Circle_Real_To_Steps Lib "MT_API.dll" (ByVal ALineCount As Long, ByVal AValue As Double) As Long

Declare Function MT_Help_Grating_Line_Steps_To_Real Lib "MT_API.dll" (ByVal AUnit_um As Double, ByVal AValue As Long) As Double

Declare Function MT_Help_Grating_Circle_Steps_To_Real Lib "MT_API.dll" (ByVal ALineCount As Long, ByVal AValue As Long) As Double

Declare Function MT_Help_Encoder_Factor Lib "MT_API.dll" (ByVal AStepAngle As Double, ByVal ADiv As Long, ByVal ALineCount As Long) As Single

Declare Function MT_Help_Grating_Line_Factor Lib "MT_API.dll" (ByVal AStepAngle As Double, ByVal ADiv As Long, ByVal APitch As Double, ByVal ALineRatio As Double, ByVal AUnit_um As Double) As Single

Declare Function MT_Help_Grating_Circle_Factor Lib "MT_API.dll" (ByVal AStepAngle As Double, ByVal ADiv As Long, ByVal ACircleRatio As Double, ByVal ALineCount As Long) As Single



